--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/Avel/Desktop/Java/org.eclipse.swt/swt.jar"/>
+	<classpathentry kind="lib" path="C:/Java/eclipse/plugins/org.eclipse.swt.win32.win32.x86_64_3.106.1.v20170829-0553.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
