--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="snakeTests/newTests.java" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Асус/Downloads/eclipse-java-oxygen-R-win32-x86_64/eclipse/plugins/org.eclipse.swt.win32.win32.x86_64_3.106.0.v20170608-0516.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Асус/Downloads/eclipse-java-oxygen-R-win32-x86_64/eclipse/plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
