--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="snakeTests/newTests.java" kind="src" path="src"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="lib" path="C:/Java/eclipse/plugins/org.eclipse.swt.win32.win32.x86_64_3.106.1.v20170829-0553.jar"/>
+	<classpathentry kind="lib" path="C:/Java/eclipse/plugins/lombok.jar"/>
 	<classpathentry kind="lib" path="C:/Java/eclipse/plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
